--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
 
   <footer class="bg-dark text-white text-center py-4">
-    <p>&copy; 2024 Soccer Store. All rights reserved.</p>
+    <p>&copy; 2024 Comfort Kicks. All rights reserved.GQ</p>
   </footer>
 
   <!-- Link to external JavaScript file -->
