--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <ul id="cart-items" class="list-group">
             <!-- Cart items will be displayed here -->
           </ul>
-          <p class="mt-3"><strong>Total:</strong> Q<span id="cart-total">0.00</span></p>
+          <p class="mt-3"><strong>Total:</strong> $<span id="cart-total">0.00</span></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -53,7 +53,7 @@
   </div>
 
   <footer class="bg-dark text-white text-center py-4">
-    <p>&copy; 2024 Comfort Kicks. All rights reserved.GQ</p>
+    <p>&copy; 2024 Soccer Store. All rights reserved.</p>
   </footer>
 
   <!-- Link to external JavaScript file -->
